# smart-course-python_genai

./: .gitignore  API-GATEWAY-TEST-RESULTS.md  FIX_PDF_IMAGE_EXTRACTION.md  FIX_PDF_RAG_INDEXING.md  Makefile  README-GATEWAY.md  README.md  ReadMe  TESTING-COMPLETE.md  cursorrules  docker-compose.yml  learn_and_debug.py  main.py  pyrightconfig.json  schemas.py
course-seed/: generate_pdfs.py  generate_python_pdfs.py  initial_db_seed_postgres_demo.sh  seed.sh  seed_python_course.py
docs/: AI-Service-Implementation-Guide.md  AI-TUTOR-IMPLEMENTATION-GUIDE.md  AI_SERVICE_ANALYSIS.md  API-Gateway-Nginx-Implementation-Guide.md  Add-PhoneNumber-Field-With-Alembic-Setup.md  AgenticAI-Plan.md  Alembic-Usage-Guide.md  Analytics-Implementation-Plan.md  Architecture-Event-Flow-Guide.md  COURSE-SERVICE-IMPLEMENTATION.md  Core-Service-Event-Driven-Implementation-Summary.md  Course-Publish-Workflow-Implementation.md  Data-Structure-Design.md  ENV-FILES-SETUP-GUIDE.md  FULLSTACK_GENAI_ROADMAP.md  Final-Architecture-Tree.md  GRAPH_CENTRALIZATION_GUIDE.md  Grafana-Prometheus-Monitoring-Guide.md  JWT-Auth-Error-Passthrough-Implementation.md  Kafka-SchemaRegistry-Celery-Implementation-Guide.md  LANGGRAPH_RAG_INDEXING_MIGRATION.md  My-Implementation-Understanding.md  Notification-Celery-Temporal-Wiring.md  (+36 more)
services/api-gateway/auth-sidecar/: Dockerfile  pyproject.toml
services/api-gateway/auth-sidecar/src/auth_sidecar/: __init__.py  config.py  main.py
services/core/: Dockerfile  pyproject.toml
services/core/src/core_service/: __init__.py  config.py  main.py
services/core/src/core_service/api/: __init__.py  router.py
services/core/src/core_service/consumers/: __init__.py  event_bridge.py  handlers.py
services/core/src/core_service/events/: __init__.py  certificate.py  course.py  enrollment.py  envelope.py  progress.py  user.py
services/core/src/core_service/kafka/: __init__.py  course_consumer.py  enrollment_consumer.py
services/core/src/core_service/providers/: __init__.py
services/core/src/core_service/providers/kafka/: __init__.py  consumer.py  producer.py  schema_registry.py  schema_utils.py  topics.py
services/core/src/core_service/providers/rabbitmq/: __init__.py  celery_app.py  dispatcher.py
services/core/src/core_service/tasks/: certificate_tasks.py  email_tasks.py  notification_tasks.py
services/core/src/core_service/temporal/: __init__.py  client.py  worker.py
services/core/src/core_service/temporal/activities/: __init__.py  ai_activities.py  course_activities.py  http_client.py  notification_activities.py  user_activities.py
services/core/src/core_service/temporal/common/: __init__.py  http_client.py  temporal_client.py
services/core/src/core_service/temporal/workflows/: __init__.py  course_publish_workflow.py  enrollment_workflow.py
services/core/src/core_service/temporal/workflows/course_publish/: __init__.py  rag_indexing_child_workflow.py  workflow.py
services/core/src/core_service/temporal/workflows/course_publish/activities/: __init__.py  course.py  indexing.py  notification.py
services/core/src/core_service/temporal/workflows/enrollment/: __init__.py  workflow.py
services/core/src/core_service/temporal/workflows/enrollment/activities/: __init__.py  course.py  notification.py  user.py
services/notification-service/: .env.example  Dockerfile  pyproject.toml
services/notification-service/src/notification_service/: __init__.py  config.py  main.py  worker.py
services/notification-service/src/notification_service/api/: __init__.py  notification.py  router.py
services/notification-service/src/notification_service/consumers/: __init__.py  event_handlers.py  kafka_consumer.py
services/notification-service/src/notification_service/core/: __init__.py  logging.py
services/notification-service/src/notification_service/mocks/: __init__.py  certificate_mock.py  email_mock.py  notification_mock.py
services/notification-service/src/notification_service/schemas/: __init__.py  notification.py
services/notification-service/src/notification_service/services/: __init__.py  notification.py
services/notification-service/src/notification_service/tasks/: __init__.py  certificate.py  email.py  notification.py
services/user-service/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/user-service/src/user_service/: config.py  main.py
services/user-service/src/user_service/alembic/: env.py
services/user-service/src/user_service/alembic/versions/: 4ac6063c6f0a_initial_baseline.py  96f087ac5e97_add_phone_number_to_users.py  9aa379d36b3d_remove_interests_and_expertise_columns.py  a1f3c8e92d05_drop_student_profile_counters.py  c2b2bb744ef6_uuid_migration_and_student_profiles.py
services/user-service/src/user_service/api/: auth.py  profile.py  router.py
services/user-service/src/user_service/core/: cache.py  database.py  s3.py  security.py
services/user-service/src/user_service/models/: __init__.py  instructor.py  student.py  user.py
services/user-service/src/user_service/repositories/: base.py  instructor_profile.py  student_profile.py  user.py
services/user-service/src/user_service/schemas/: auth.py  user.py
services/user-service/src/user_service/services/: auth.py  user.py
shared/: pyproject.toml
shared/src/shared/: __init__.py
shared/src/shared/exceptions/: __init__.py  common.py
shared/src/shared/kafka/: __init__.py  consumer.py  producer.py  schema_registry.py  topics.py
shared/src/shared/schemas/: __init__.py  envelope.py  pagination.py
shared/src/shared/schemas/events/: __init__.py  certificate.py  course.py  enrollment.py  progress.py  user.py
shared/src/shared/storage/: __init__.py  s3.py
shared/src/shared/temporal/: __init__.py  client.py  constants.py  inputs.py
shared/src/shared/utils/: __init__.py  datetime.py
(+210 files in other folders)
