[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared library for SmartCourse microservices"
authors = [
    {name = "SmartCourse Team"}
]
dependencies = [
    "pydantic",
    "aiokafka",
    "confluent-kafka",
    "fastapi",
    "uvicorn"
]

[tool.setuptools.packages.find]
where = ["src"]