[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcourse-core"
version = "0.1.0"
description = "SmartCourse Core Service — workflow orchestration boundary"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    # Temporal SDK
    "temporalio>=1.5.0",
    # Kafka consumer for workflow triggers
    "aiokafka>=0.10.0",
    # HTTP client for real activities
    "aiohttp>=3.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core_service*"]
